--- a/helm/etl/values.auto-updated.production.yaml
+++ b/helm/etl/values.auto-updated.production.yaml
@@ -1,2 +1,5 @@
 etl:
   image: ghcr.io/whiletrue-industries/srm-etl:v0.0.2-931cfc3f397ffb47838a2f6a89d93e3e3c5ff949
+
+api:
+  image: ghcr.io/whiletrue-industries/srm-api:v0.0.2-704a28e96cf77e9b71b75032ad91a32a14eff27d
