--- a/helm/etl/templates/etl-deployment.yaml
+++ b/helm/etl/templates/etl-deployment.yaml
@@ -64,3 +64,13 @@ spec:
               value: "postgresql://postgres:postgres@{{ .Values.db.name }}/airflow"
             - name: ETLS_DATABASE_URL
               value: "postgresql://postgres:postgres@{{ .Values.db.name }}/etls"
+            - name: GUIDESTAR_PASSWORD
+              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"GUIDESTAR_PASSWORD"}}
+            - name: GUIDESTAR_USERNAME
+              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"GUIDESTAR_USERNAME"}}
+            - name: DATAFLOWS_AIRTABLE_APIKEY
+              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"DATAFLOWS_AIRTABLE_APIKEY"}}
+            - name: GOOGLE_API_KEY
+              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"GOOGLE_API_KEY"}}
+            - name: GOVMAP_API_KEY
+              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"GOVMAP_API_KEY"}}
