--- a/helm/etl/templates/etl-deployment.yaml
+++ b/helm/etl/templates/etl-deployment.yaml
@@ -74,3 +74,5 @@ spec:
               valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"GOOGLE_API_KEY"}}
             - name: GOVMAP_API_KEY
               valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"GOVMAP_API_KEY"}}
+            - name: MAPBOX_ACCESS_TOKEN
+              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"MAPBOX_ACCESS_TOKEN"}}
