Update usage of Google Maps API key.

--- a/.etl.env
+++ b/.etl.env
@@ -24,4 +24,4 @@ ETL_MAPBOX_UPLOAD_STATUS=https://api.mapbox.com/uploads/v1/srm-kolzchut/
 
 ETL_DATAFLOWS_AIRTABLE_APIKEY=
 
-GOOGLE_API_KEY=
+ETL_GOOGLE_MAPS_API_KEY=
