--- a/helm/etl/templates/etl-deployment.yaml
+++ b/helm/etl/templates/etl-deployment.yaml
@@ -64,8 +64,8 @@ spec:
               value: "postgresql://postgres:postgres@{{ .Values.db.name }}/airflow"
             - name: ETLS_DATABASE_URL
               value: "postgresql://postgres:postgres@{{ .Values.db.name }}/etls"
-            - name: GOOGLE_API_KEY
-              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"GOOGLE_API_KEY"}}
+            - name: ETL_GOOGLE_MAPS_API_KEY
+              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"ETL_GOOGLE_MAPS_API_KEY"}}
             - name: ETL_DATAFLOWS_AIRTABLE_APIKEY
               valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"ETL_DATAFLOWS_AIRTABLE_APIKEY"}}
             - name: ETL_CLICK_API
