Expose minio port

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,6 +56,8 @@ services:
     command:
       - server
       - /data
+    ports:
+      - "9000:9000"
     environment:
       MINIO_ACCESS_KEY: access_key
       MINIO_SECRET_KEY: secret_key
