--- a/helm/etl/templates/minio-deployment.yaml
+++ b/helm/etl/templates/minio-deployment.yaml
@@ -22,6 +22,13 @@ spec:
           image: {{ .Values.minio.image | quote }}
           args: ["server", "/data"]
           resources: {{ toYaml .Values.minio.resources | nindent 12 }}
+          env:
+            - name: MINIO_ACCESS_KEY
+              value: "access_key"
+            - name: MINIO_SECRET_KEY
+              value: "secret_key"
+            - name: MINIO_REGION_NAME
+              value: "us-east-1"
           volumeMounts:
             - name: data
               mountPath: /data
