--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,13 @@ jobs:
         curl -s https://raw.githubusercontent.com/OriHoch/uumpa-ci-toolbox/main/bin/github_actions_install.sh \
           | bash -s 22c1970adcd72930509ff5b8eabd52124a9e6866 OriHoch/uumpa-ci-toolbox &&\
         uci helm install --version "${HELM_VERSION}" --with-sudo &&\
-        echo "${KUBECONFIG}" > .kubeconfig
-        export KUBECONFIG="$(pwd)/.kubeconfig"
+        echo "${KUBECONFIG}" > .kubeconfig &&\
+        export KUBECONFIG="$(pwd)/.kubeconfig" &&\
+        echo "${SRM_DEVOPS_DEPLOY_KEY}" > srm_devops_deploy_key &&\
+        chmod 400 srm_devops_deploy_key &&\
+        export GIT_SSH_COMMAND="ssh -i $(pwd)/srm_devops_deploy_key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no" &&\
+        git config --global user.name "srm-devops-ci" &&\
+        git config --global user.email "srm-devops-ci@localhost" &&\
         uci git checkout \
           --github-repo-name whiletrue-industries/srm-devops \
           --branch-name main \
