--- a/environments/etl-staging/charts/etl/values.yaml
+++ b/environments/etl-staging/charts/etl/values.yaml
@@ -16,7 +16,7 @@ kibana:
 api:
   resources: {"requests": {"cpu": "25m", "memory": "128Mi"}, "limits": {"memory": "256Mi"}}
   ES_INDEX_NAME: "srm"
-  ES_DATAPACKAGE: "https://next.obudget.org/datapackages/budgetkey/gov_decisions/datapackage.json"
+  ES_DATAPACKAGE: "https://srm-staging.datacity.org.il/dataset/2cb5b186-3d0e-4076-a7a1-a00e62bbb03f/resource/aa9c9790-5ab5-4b38-b722-a077623abcc1/download/datapackage.json"
 
 minio:
   resources: {"requests": {"cpu": "25m", "memory": "128Mi"}, "limits": {"memory": "256Mi"}}
