--- a/helm/etl/templates/etl-deployment.yaml
+++ b/helm/etl/templates/etl-deployment.yaml
@@ -92,3 +92,10 @@ spec:
               {{- else }}
               value: "elastic:Aa123456"
               {{- end }}
+            - name: CKAN_API_KEY
+              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"CKAN_API_KEY"}}
+            - name: CKAN_HOST
+              valueFrom: {{ .Values.etl.ckanHost | quote }}
+            - name: CKAN_OWNER_ORG
+              value: "muni"
+
