Add env name to etl vars

--- a/environments/etl-staging/charts/etl/values.yaml
+++ b/environments/etl-staging/charts/etl/values.yaml
@@ -32,6 +32,7 @@ etl:
   EXTERNAL_ADDRESS: "https://srm-staging-etl.whiletrue.industries"
   secretName: "etl"
   ckanHost: "https://srm-staging.datacity.org.il"
+  envName: "staging"
 
 ingresses:
   - name: etl
