--- a/environments/etl-production/charts/etl/values.yaml
+++ b/environments/etl-production/charts/etl/values.yaml
@@ -16,7 +16,12 @@ kibana:
 api:
   resources: {"requests": {"cpu": "25m", "memory": "128Mi"}, "limits": {"memory": "256Mi"}}
   ES_INDEX_NAME: "srm"
-  ES_DATAPACKAGE: "https://next.obudget.org/datapackages/budgetkey/gov_decisions/datapackage.json"
+  ES_DATAPACKAGE: |
+    https://srm-staging.datacity.org.il/dataset/d3e2603d-fd87-42a9-ab5b-ff15e22013f8/resource/48aba26d-eef2-4720-a2d2-c26d8377a8cb/download/datapackage.json
+    https://srm-staging.datacity.org.il/dataset/0386f511-bd1b-4931-8c3c-88c45272f642/resource/964e3928-c8c1-4460-a5c2-0f46f18c7ab5/download/datapackage.json
+    https://srm-staging.datacity.org.il/dataset/71a7e998-4984-472a-9e96-66890bbef5f5/resource/680bd503-7e7b-4674-878b-4635690bb099/download/datapackage.json
+    https://srm-staging.datacity.org.il/dataset/8057b3a6-3c0f-4630-b3fa-2b2a8de93d27/resource/8bed510b-4889-4792-bb9d-d6f35cf6db83/download/datapackage.json
+    https://srm-staging.datacity.org.il/dataset/4faa5ef4-2d66-4e4d-8aa9-f72c53f02a2f/resource/0fbd4381-ef19-4025-80b6-069ebc6f9955/download/datapackage.json
 
 minio:
   resources: {"requests": {"cpu": "25m", "memory": "128Mi"}, "limits": {"memory": "256Mi"}}
@@ -27,6 +32,7 @@ etl:
   EXTERNAL_ADDRESS: "https://srm-production-etl.whiletrue.industries"
   secretName: "etl"
   ckanHost: "https://srm.datacity.org.il"
+  envName: "production"
 
 ingresses:
   - name: etl
