--- a/helm/etl/templates/elasticsearch-deployment.yaml
+++ b/helm/etl/templates/elasticsearch-deployment.yaml
@@ -34,6 +34,12 @@ spec:
             - name: ES_JAVA_OPTS
               # -Dlog4j2.formatMsgNoLookups=true is required to mitigate CVE-2021-44228
               value: {{ printf "-Dlog4j2.formatMsgNoLookups=true %s" .Values.elasticsearch.ES_JAVA_OPTS | quote }}
+            {{ if .Values.elasticsearch.enableBackups }}
+            - name: S3_CLIENT_DEFAULT_ACCESS_KEY
+              valueFrom: {"secretKeyRef":{"name": "elasticsearch-backup", "key": "S3_CLIENT_DEFAULT_ACCESS_KEY"}}
+            - name: S3_CLIENT_DEFAULT_SECRET_KEY
+              valueFrom: {"secretKeyRef":{"name": "elasticsearch-backup", "key": "S3_CLIENT_DEFAULT_SECRET_KEY"}}
+            {{ end }}
           volumeMounts:
             - name: data
               mountPath: /usr/share/elasticsearch/data
