--- a/environments/etl-production/charts/etl/values.yaml
+++ b/environments/etl-production/charts/etl/values.yaml
@@ -29,6 +29,9 @@ api:
 minio:
   resources: {"requests": {"cpu": "25m", "memory": "128Mi"}, "limits": {"memory": "256Mi"}}
   nfsPath: "/srm/etl-production/minio"
+  backup:
+    enabled: true
+    TARGET_BUCKET_PATH: "kolzchut-backups/srm-etl-minio"
 
 etl:
   resources: {"requests": {"cpu": "247m", "memory": "1953Mi"}, "limits": {"memory": "4000Mi"}}
