--- a/helm/ckan-backups/values.yaml
+++ b/helm/ckan-backups/values.yaml
@@ -5,3 +5,11 @@ dataBackup:
   resources:
     requests: { "cpu": "25m",  "memory": "300Mi" }
     limits: { "cpu": "165m", "memory": "600Mi" }
+
+dbBackup:
+  # every Sunday 2:46
+  schedule: "46 2 * * 0"
+  image: ghcr.io/whiletrue-industries/srm-devops-aws-s3-backup-ckan-db@sha256:891ceb90412953f6cc9f16398d6f2785db3a59c0789cba6c495d93c4ee032715
+  resources:
+    requests: { "cpu": "25m",  "memory": "300Mi" }
+    limits: { "cpu": "165m", "memory": "600Mi" }
