--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,15 +31,19 @@ services:
       - elasticsearch
 
   db:
-    image: ghcr.io/whiletrue-industries/srm-etl-db:623eb6ac56d5762b8d73acf6958946906378f429@sha256:2a448564a3d1c05f471fcb92f9489ac4cd6f8e9d77a0578265b99c4731d81603
+    image: ghcr.io/whiletrue-industries/srm-etl-db:9ce02bcde3742805847ed5e925fe7da0e01cab34@sha256:ebb25f6a73151e0cf9167e8fb25590b6d3064b4771fdf2a761836c9fdc08ecb3
     restart: on-failure
     ports:
       - "5432:5432"
     volumes:
       - "db:/var/lib/postgresql/data"
+    environment:
+      DB_RESTORE_AWS_ACCESS_KEY_ID: "${DB_RESTORE_AWS_ACCESS_KEY_ID}"
+      DB_RESTORE_AWS_SECRET_ACCESS_KEY: "${DB_RESTORE_AWS_SECRET_ACCESS_KEY}"
+      DB_RESTORE_BUCKET_PATH_FILENAME: "${DB_RESTORE_BUCKET_PATH_FILENAME}"
 
   db-backup:
-    image: ghcr.io/whiletrue-industries/srm-etl-db:74f986e282fff4f39c831c22322c2b028be4f350@sha256:bf8ebbd5466d46557d8aba0468cc7f7f31d9fdd3a834f1add3a266fbe1960c8d
+    image: ghcr.io/whiletrue-industries/srm-etl-db:9ce02bcde3742805847ed5e925fe7da0e01cab34@sha256:ebb25f6a73151e0cf9167e8fb25590b6d3064b4771fdf2a761836c9fdc08ecb3
     command: ["/srv/backup.sh"]
     restart: "no"
     environment:
