--- a/helm/etl/values.yaml
+++ b/helm/etl/values.yaml
@@ -14,6 +14,11 @@ db:
     resources:
       requests: {"cpu": "25m",  "memory": "200Mi"}
       limits: {"cpu": "165m", "memory": "400Mi"}
+  restore:
+    enabled: false
+    awsAccessKeyId: ""
+    awsSecretAccessKey: ""
+    backupBucketPath: ""
 
 elasticsearch:
   name: elasticsearch
