Different mapbox tileset ids for staging and production

--- a/environments/etl-production/charts/etl/values.yaml
+++ b/environments/etl-production/charts/etl/values.yaml
@@ -39,6 +39,8 @@ etl:
   secretName: "etl"
   ckanHost: "https://srm.datacity.org.il"
   envName: "production"
+  mapboxTilesetId: "srm-kolzchut.geo-data"
+  mapboxTilesetName: "SRM Geo Data"
 
 ingresses:
   - name: etl
