Downgrade kibana to 7.10.2

--- a/environments/etl-staging/charts/etl/values.yaml
+++ b/environments/etl-staging/charts/etl/values.yaml
@@ -13,6 +13,7 @@ elasticsearch:
 
 kibana:
   resources: {"requests": {"cpu": "25m", "memory": "256Mi"}, "limits": {"memory": "512Mi"}}
+  image: docker.elastic.co/kibana/kibana:7.10.2
 
 api:
   resources: {"requests": {"cpu": "25m", "memory": "128Mi"}, "limits": {"memory": "256Mi"}}
