--- a/helm/etl/templates/etl-deployment.yaml
+++ b/helm/etl/templates/etl-deployment.yaml
@@ -82,6 +82,10 @@ spec:
               valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"ETL_AIRTABLE_ALTERNATE_BASE"}}
             - name: ETL_AIRTABLE_DATAENTRY_BASE
               valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"ETL_AIRTABLE_DATAENTRY_BASE"}}
+            - name: ETL_AIRTABLE_GUIDESTAR_IMPORT_BASE
+              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"ETL_AIRTABLE_GUIDESTAR_IMPORT_BASE"}}
+            - name: ETL_AIRTABLE_ENTITIES_IMPORT_BASE
+              valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"ETL_AIRTABLE_ENTITIES_IMPORT_BASE"}}
             - name: ETL_MAPBOX_ACCESS_TOKEN
               valueFrom: {"secretKeyRef":{"name":{{ .Values.etl.secretName | quote }}, "key":"ETL_MAPBOX_ACCESS_TOKEN"}}
             - name: ES_INDEX_NAME
