--- a/helm/etl/values.staging.yaml
+++ b/helm/etl/values.staging.yaml
@@ -9,6 +9,8 @@ elasticsearch:
   nfsPath: "/srm/etl-staging/elasticsearch"
   secretName: "elasticsearch"
   ES_JAVA_OPTS: "-Xms2048m -Xmx2048m"
+  image: ghcr.io/whiletrue-industries/srm-etl-elasticsearch:c1f1974c43f9a4113bc0c644e9e8047c5abf563a@sha256:0cca88e7ae514e170d57319e378fd03ce8c3aa063ab99593c581f0c863b1b0ff
+
 
 kibana:
   resources: {"requests": {"cpu": "25m", "memory": "256Mi"}, "limits": {"memory": "512Mi"}}
