srm-site: Update ingresses

--- a/helm/site/templates/ingresses.yaml
+++ b/helm/site/templates/ingresses.yaml
@@ -1,5 +1,5 @@
 {{ range .Values.ingresses }}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .name }}
@@ -10,8 +10,11 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: {{ .serviceName }}
-          servicePort: {{ .servicePort }}
+          service:
+            name: {{ .serviceName }}
+            port:
+              number: {{ .servicePort }}
+        pathType: ImplementationSpecific
   {{ end }}
 ---
 {{ end }}
