fix site ingress for latest k8s ingress version

--- a/helm/site/templates/ingresses.yaml
+++ b/helm/site/templates/ingresses.yaml
@@ -15,6 +15,7 @@ spec:
             port:
               number: {{ .servicePort }}
         pathType: ImplementationSpecific
+        path: /(.*)
   {{ end }}
 ---
 {{ end }}
