--- a/helm/site/templates/ingresses.yaml
+++ b/helm/site/templates/ingresses.yaml
@@ -3,6 +3,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .name }}
+  labels:
+    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
   {{ range .rules }}
