--- a/helm/site/templates/ingresses.yaml
+++ b/helm/site/templates/ingresses.yaml
@@ -17,7 +17,7 @@ spec:
             port:
               number: {{ .servicePort }}
         pathType: ImplementationSpecific
-        path: /(.*)
+        path: /
   {{ end }}
 ---
 {{ end }}
