--- a/helm/etl/values.production.yaml
+++ b/helm/etl/values.production.yaml
@@ -53,7 +53,7 @@ ingresses:
         servicePort: 5000
   - name: api
     rules:
-      - host: srm-production-api.whiletrue.industries
+      - host: api.kolsherut.org.il
         serviceName: api
         servicePort: 5000
   - name: kibana
