--- a/helm/etl/values.staging.yaml
+++ b/helm/etl/values.staging.yaml
@@ -44,6 +44,9 @@ etl:
   mapboxTilesetName: "SRM Geo Staging Data"
   mapboxTilesetInaccurateId: "srm-kolzchut.point-data-inaccurate-staging"
   mapboxTilesetInaccurateName: "SRM Geo Staging Data Inaccurate"
+  emailNotifierSender: "notifier.etl@gmail.com"
+  emailNotifierPassword: "wkvc dxbx uxzl ytyf"
+  emailNotifierRecipientList: "eli.rabby@kolzchut.org.il,efrat.shamir@kolzchut.org.il"
 
 ingresses:
   - name: etl
