--- a/helm/etl/values.production-envvars.yaml
+++ b/helm/etl/values.production-envvars.yaml
@@ -1,4 +1,4 @@
 etl:
   env:
-    # - name: EMAIL_NOTIFIER_PASSWORD
-    #   value: scen tgnx csuz uqkw
+    # - name: example
+    #   value: exampleValue
